Tue Oct 27 10:25:06 PST 1998

History sucks.

Added the ability to do a holduntil based on a time_t in the client stuff.

--------------------

Wed Jun  3 08:50:13 PDT 1998

The client library is now a keen little SNPP library that simplifies things
quite a bit, while making it possible to do many more things (including
determine whether there was success or not).

--------------------

Mon Apr 13 07:45:24 PDT 1998

As of version 2.12.1, notify of delivery success/failure is now available.

--------------------

Thu Jan 15 02:19:08 PST 1998

Internal queue running is now available.

--------------------

Mon Dec 29 00:50:09 PST 1997
module configs all moved under modules.*

debugging should now be done via the _ndebug macro, which takes two
arguments, the debug level, and the arguments to pass to printf

--------------------

This isn't much of a history, but it may be if we start using it.

    I'm working on SQL based user and terminal databases right now using
PostgreSQL.  Potentially, any RDBMS that uses SQL could work, but I'm
using Postgres because it's the best.  :)

--------------------

    The first major change I made after release_2_9_3 I made consisted of
configuration file movement.  This is very important:

    etc.userdb and etc.termdb are now databases.userdb and
    databases.termdb respectively

Please update your local configs for this, you can use the included
sample for reference.

    Also, databases.nis_userdb and nis_termdb have been removed for the
more generic databases.userdbType and databases.termdbType.  These now
use a string as an argument, and it is matched against known database
types.  The term database info is currently ignored.

----------------------------------------
$Id: HISTORY,v 2.9 1998/10/27 18:31:19 dustin Exp $