@@ -28,8 +28,8 @@ Would like it to work on:
 
 Documentation:
 
-    All of my documentation ends in .c
+    Most of my documentation ends in .c
 
 ----------------------------------------
 Copyright (c) 1997  Dustin Sallings
-$Id: README,v 2.6 1998/09/24 19:36:20 dustin Exp $
+$Id: README,v 2.7 1998/12/28 03:23:54 dustin Exp $
